# dbt-databricks-demo

./: .user.yml  Dockerfile  README.md  dbt_test.py  pyproject.toml  requirements.txt
dbt_databricks_demo/: dbt_project.yml
dbt_databricks_demo/analyses/: full_moon_no_sleep.sql
dbt_databricks_demo/macros/: no_nulls_in_columns.sql
dbt_databricks_demo/models/: overview.md  schema.yml  sources.yml
dbt_databricks_demo/models/dim/: dim_listings_cleansed.sql  dim_listings_w_hosts.sql
dbt_databricks_demo/models/fct/: fct_reviews.sql
dbt_databricks_demo/models/mart/: mart_fullmoon_reviews.sql
dbt_databricks_demo/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbt_databricks_demo/snapshots/: scd_raw_listings.sql
dbt_databricks_demo/tests/: dim_listings_minimum_nights.sql  no_nulls_in_dim_listings.sql
